[workspace]
members = [
    "fuzz",
    "stream-swap-anchor/",
    "stream-swap-client/",
    "stream-swap-math/",
    "stream-swap-math/sim",
    "stream-swap-program/program"
]

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
