[package]
name = "stream-swap-client"
version = "1.8.1"
description = "StreamSwap Rust client."
license = "Apache-2.0"
authors = ["Stream Protocol <contact@streamprotocol.org>"]
homepage = "https://swap.streamprotocol.org"
repository = "https://github.com/streamdao/stream-swap"
edition = "2021"
keywords = ["solana", "stream", "anchor"]

[features]
fuzz = ["arbitrary"]

[dependencies]
arbitrary = { version = "1.0.2", features = ["derive"], optional = true }
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "^1.7"
thiserror = "1.0"
