[package]
name = "stream-swap-math"
version = "1.8.1"
description = "Calculations for the StreamSwap invariant"
license = "Apache-2.0"
authors = ["Stream Protocol <contact@streamprotocol.org>"]
homepage = "https://swap.streamprotocol.org"
repository = "https://github.com/streamdao/stream-swap"
edition = "2021"
keywords = ["solana", "stream", "math"]

[dependencies]
borsh = "0.9.2"
num-traits = "0.2"
stream-swap-client = { path = "../stream-swap-client", version = "^1" }
# This must be pinned to 0.9.1 until Solana's Rust fork supports Rust >=1.56.1
uint = { version = "=0.9.1", default-features = false }

[dev-dependencies]
proptest = "1.0.0"
rand = "0.8.4"
stream-swap-sim = { path = "./sim", version = "^0.1" }
